// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AvailableTasks should render Delete disabled 1`] = `
<DocumentFragment>
  <div
    class="pf-c-dropdown pf-m-align-right pf-m-expanded"
    data-ouia-component-id="OUIA-Generated-Dropdown-2"
    data-ouia-component-type="PF4/Dropdown"
    data-ouia-safe="true"
  >
    <button
      aria-expanded="true"
      aria-haspopup="true"
      aria-label="Actions"
      class="pf-c-dropdown__toggle pf-m-plain"
      id="executed-task-kebab"
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align: -0.125em;"
        viewBox="0 0 192 512"
        width="1em"
      >
        <path
          d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
        />
      </svg>
    </button>
    <ul
      aria-labelledby="executed-task-kebab"
      class="pf-c-dropdown__menu pf-m-align-right"
      role="menu"
    >
      <li
        role="menuitem"
      >
        <button
          aria-disabled="false"
          aria-label="cancel-task-kebab-button"
          class="pf-c-dropdown__menu-item"
          data-ouia-component-id="cancel-task-dropdown-item"
          data-ouia-component-type="PF4/DropdownItem"
          data-ouia-safe="true"
          tabindex="-1"
          type="button"
        >
          Cancel
        </button>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`AvailableTasks should render correctly 1`] = `
<DocumentFragment>
  <div
    class="pf-c-dropdown pf-m-align-right pf-m-expanded"
    data-ouia-component-id="OUIA-Generated-Dropdown-1"
    data-ouia-component-type="PF4/Dropdown"
    data-ouia-safe="true"
  >
    <button
      aria-expanded="true"
      aria-haspopup="true"
      aria-label="Actions"
      class="pf-c-dropdown__toggle pf-m-plain"
      id="executed-task-kebab"
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align: -0.125em;"
        viewBox="0 0 192 512"
        width="1em"
      >
        <path
          d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
        />
      </svg>
    </button>
    <ul
      aria-labelledby="executed-task-kebab"
      class="pf-c-dropdown__menu pf-m-align-right"
      role="menu"
    >
      <li
        role="menuitem"
      >
        <button
          aria-disabled="false"
          aria-label="delete-task-kebab-button"
          class="pf-c-dropdown__menu-item"
          data-ouia-component-id="delete-task-dropdown-item"
          data-ouia-component-type="PF4/DropdownItem"
          data-ouia-safe="true"
          tabindex="-1"
          type="button"
        >
          Delete
        </button>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
